Overflow fix for older mobile browsers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,8 @@
 }
 body{
     font-family: 'Roboto', sans-serif;
+    height: 100vh;
+    width: 100vw;
     overflow: hidden;
     color: #DDD;
 }
